@@ -192,6 +192,7 @@ class SharedDataMiddleware(object):
         manager = ResourceManager()
         filesystem_bound = isinstance(provider, DefaultProvider)
         def loader(path):
+            path = posixpath.join(package_path, path)
             if path is None or not provider.has_resource(path):
                 return None, None
             basename = posixpath.basename(path)
